Fixed styling issue on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -190,6 +190,10 @@ header.container-fluid {
     letter-spacing: 0.5px;
 }
 
+.main-content {
+    padding-top: 350px;
+}
+
 .overlay {
     height: 100%;
     width:100%;
